@@ -1,22 +1,34 @@
 <?php
 namespace Siel\Acumulus\Magento\Magento2\Helpers;
 
-use Siel\Acumulus\Helpers\TranslationCollection;
+use Siel\Acumulus\Magento\Helpers\ModuleSpecificTranslations as ModuleSpecificTranslationsBase;
 
 /**
  * Contains plugin specific overrides.
  */
-class ModuleSpecificTranslations extends TranslationCollection
+class ModuleSpecificTranslations extends ModuleSpecificTranslationsBase
 {
-    protected $nl = array(
-        'button_link' => '<a href="%2$s" class="abs-action-primary" style="text-decoration: none; color: #fff">%1$s</a>',
+    public function __construct()
+    {
+        $this->nl += array(
+            'button_link' => '<a href="%2$s" class="abs-action-primary" style="text-decoration: none; color: #fff">%1$s</a>',
 
-        'menu_advancedSettings' => 'Winkels → Overige instellingen → Acumulus Advanced Config',
-        'menu_basicSettings' => 'Winkels → Overige instellingen → Acumulus Config',
-    );
+            'menu_advancedSettings' => 'Winkels → Overige instellingen → Acumulus Advanced Config',
+            'menu_basicSettings' => 'Winkels → Overige instellingen → Acumulus Config',
 
-    protected $en = array(
-        'menu_advancedSettings' => 'Stores → Other settings → Acumulus Advanced Config',
-        'menu_basicSettings' => 'Stores → Other settings → Acumulus Config',
-    );
+            // Rate our plugin message.
+            'review_on_marketplace' => 'Zou jij ons een review willen geven op Magento Marketplace?',
+            // These are the same for English thus no need to copy them.
+            'module' => 'module',
+            'review_url' => 'https://marketplace.magento.com/siel-acumulus-ma2.html',
+        );
+
+        $this->en += array(
+            'menu_advancedSettings' => 'Stores → Other settings → Acumulus Advanced Config',
+            'menu_basicSettings' => 'Stores → Other settings → Acumulus Config',
+
+            // Rate our plugin message.
+            'review_on_marketplace' => 'Would you please give us a review on Magento Marketplace?',
+        );
+    }
 }
