@@ -14,9 +14,16 @@ class ModuleSpecificTranslations extends TranslationCollection
         'meta_original_order_for_refund' => 'Post meta van de oorspronkelijke bestelling, alleen beschikbaar bij credit nota\'s',
         'wc2_end_support' => 'LET OP: de Acumulus plugin zal in een volgende versie stoppen met het ondersteunen van Woocommerce 2! Begin nu met het upgraden naar WooCommerce 3.',
 
+        // Invoice status overview: shorter labels due to available space.
         'vat_type' => 'Soort',
         'payment_status' => 'Status',
         'documents' => 'Pdf\'s',
+
+        // Rate our plugin message.
+        'review_on_marketplace' => 'Zou jij ons een review willen geven op WordPress.org?',
+        // These are the same for English thus no need to copy them.
+        'module' => 'plugin',
+        'review_url' => 'https://wordpress.org/support/plugin/acumulus/reviews/#new-post',
     );
 
     protected $en = array(
@@ -24,8 +31,12 @@ class ModuleSpecificTranslations extends TranslationCollection
         'meta_original_order_for_refund' => 'Post meta of the original order, only available with credit notes',
         'wc2_end_support' => 'NOTE: in a next version the Acumulus plugin will stop supporting WooCommerce 2! Start upgrading to wooCommerce 3 now.',
 
+        // Invoice status overview: shorter labels due to available space.
         'vat_type' => 'Type',
         'payment_status' => 'Status',
         'documents' => 'Docs',
+
+        // Rate our plugin message.
+        'review_on_marketplace' => 'Would you please give us a review on WordPress.org?',
     );
 }
